# trace-embrace

./: .gitignore  LICENSE  README.md  changelog.md  default.nix  gen-trace-embrace-cabal.sh  trace-embrace.cabal  trace-embrace.cabal.template  trace-if.cabal
nix/: local.sources.json  sources.json
nix/haskell/: overlay.nix
src/Debug/: TraceEmbrace.hs  TraceIf.hs
src/Debug/TraceEmbrace/: ByteString.hs  Config.hs  FileIndex.hs  Haddock.hs  If.hs  Show.hs  ShowTh.hs  TH.hs
src/Debug/TraceEmbrace/Config/: #Type.hs#  Load.hs  Type.hs  Validation.hs
src/Debug/TraceEmbrace/Config/Type/: EnvVar.hs  Level.hs  Mode.hs  TraceMessage.hs
src/Debug/TraceEmbrace/Internal/: Rewrap.hs  TH.hs
src/Debug/TraceIf/: Config.hs  FileIndex.hs  If.hs  Show.hs  ShowTh.hs  TH.hs
src/Debug/TraceIf/Config/: Load.hs  Type.hs  Validation.hs
src/Debug/TraceIf/Config/Type/: EnvVar.hs  Level.hs  TraceMessage.hs
src/Debug/TraceIf/Internal/: TH.hs
test/: Demo.hs  Driver.hs
test/Debug/TraceEmbrace/Test/TraceEmbrace/: Config.hs  DemoIndex.hs  FileIndex.hs  GuardedFunction.hs  TH.hs  Yaml.hs
test/Debug/TraceEmbrace/Test/TraceEmbrace/TH/: Event.hs  Line.hs  Threshold.hs
test/Debug/TraceEmbrace/Test/TraceEmbrace/TH/Format/: Lifted.hs  Unboxed.hs
test/Debug/TraceIf/Test/TraceIf/: Config.hs  DemoIndex.hs  FileIndex.hs  TH.hs  Yaml.hs
test/Debug/TraceIf/Test/TraceIf/TH/: Event.hs  Line.hs  Threshold.hs
test/Debug/TraceIf/Test/TraceIf/TH/Format/: Lifted.hs  Unboxed.hs
