cabal-version:   3.0
name:            trace-if
version:         0.0.1
license:         BSD-3-Clause
license-file:    LICENSE
category:        Development
author:          Daniil Iaitskov <dyaitskov@gmail.com>
maintainer:      Daniil Iaitskov <dyaitskov@gmail.com>
stability:       experimental
synopsis:        Conditional Debug.Trace controlled via environment variable
homepage:        https://github.com/yaitskov/trace-if
bug-reports:     https://github.com/yaitskov/trace-if/issues
build-type:      Simple
description:
  Minimize the hassle of writing and maintaining traces in your codebase.

  There are several issues with functions from standand GHC module "Debug.Trace":

  * no trace emitting location
  * tracing multiple values requires to write boilerplate code
  * no way to quickly disable tracing without recompilation
  * no way to keep tracing in source code withou affecting production code

  === Example

  @
  {-# LANGUAGE TemplateHaskell #-}
  module Foo where
  import Debug.TraceIf
  foo x y z = $(tw "foo get/x y z") (x + y + z)

  module Main
  import Foo
  main = putStrLn (foo 1 2 3)
  @

  Trace line for the snippet above would be:

  @
    3:Foo foo get; x: 1; y: 2; z: 3 => 6
  @

  \"NOTRACE\" environment variable disables traces at runtime and
  removes tracing code completely at compile time.

tested-with:
  GHC == 9.10.1

library
  build-depends:
    base < 5,
    bytestring,
    template-haskell
  exposed-modules:
    Debug.TraceIf
    Debug.TraceIf.If
    Debug.TraceIf.Show
    Debug.TraceIf.TH

  ghc-options: -O2 -Wall
  hs-source-dirs: src
  default-language: Haskell2010
  default-extensions:
    FlexibleContexts
    FlexibleInstances
    ImportQualifiedPost
    LambdaCase
    ScopedTypeVariables

test-suite test
  type: exitcode-stdio-1.0
  main-is: Driver.hs
  other-modules:
    Discovery
    Debug.TraceIf.Test.TraceIf.TH
    Paths_trace_if
  autogen-modules:
    Paths_trace_if
  hs-source-dirs:
    test
  default-extensions:
    ScopedTypeVariables
  ghc-options: -Wall -dynamic -rtsopts -threaded -main-is Driver
  build-depends:
      base
    , bytestring
    , tasty
    , tasty-discover
    , tasty-hunit
    , tasty-quickcheck
    , template-haskell
    , trace-if
  default-language: Haskell2010

source-repository head
  type:     git
  location: https://github.com/yaitskov/trace-if.git
