cabal-version:   3.0
name:            trace-if
version:         0.0.2
license:         BSD-3-Clause
license-file:    LICENSE
category:        Development
author:          Daniil Iaitskov <dyaitskov@gmail.com>
maintainer:      Daniil Iaitskov <dyaitskov@gmail.com>
stability:       experimental
synopsis:        Conditional Debug.Trace controlled via environment variable
homepage:        https://github.com/yaitskov/trace-if
bug-reports:     https://github.com/yaitskov/trace-if/issues
build-type:      Simple
description:
  Minimize the hassle of writing and maintaining traces in your codebase.

  There are several issues with functions from standand GHC module "Debug.Trace":

  * no trace emitting location
  * tracing multiple values requires to write boilerplate code
  * no way to quickly disable tracing without recompilation
  * no way to keep tracing in source code withou affecting production code

  == Examples
  === TH

  @
  {-# LANGUAGE TemplateHaskell #-}
  module Foo where
  import Debug.TraceIf
  foo x y z = $(tw "foo get/x y z") (x + y + z)
  @

  Trace line for @foo 1 2 3@ would be:

  @
    3:Foo foo get; x: 1; y: 2; z: 3 => 6
  @

  \"NOTRACE\" environment variable disables traces at runtime and
  removes tracing code completely at compile time.

  === Pattern matching

  Template tracing functions support Haskell pattern syntax and comments, so
  function arguments can be quickly copy-pasted as-is:

  @
  {-# LANGUAGE TemplateHaskell #-}
  module Foo where

  import Debug.TraceIf

  foo :: Maybe ([Int], Int) -> Int
  foo v@(Just ([x], {-ignore-} _)) = $(tr "foo get/v@(Just ([x], {-ignore-} _))") x
  foo _ = 0
  @

  A trace line for @foo ([1], 2)@ would be:

  >   7:Foo foo get; v: Just 1; x: 1

  === Unlifted vars

  @
  {-# LANGUAGE TemplateHaskell #-}
  {-# LANGUAGE MagicHash #-}
  module Foo where

  import Debug.TraceIf
  import GHC.Exts

  foo :: Int -> ()
  foo (I# x#) = $(tr "foo get/x#") ()
  @

  A trace line for @foo 1@ would be:

  >   7:Foo foo get; x#: 1#

tested-with:
  GHC == 9.10.1

library
  build-depends:
    base < 5,
    bytestring > 0.11 && < 0.12.3,
    template-haskell < 2.24.0.0,
  exposed-modules:
    Debug.TraceIf
    Debug.TraceIf.If
    Debug.TraceIf.Show
    Debug.TraceIf.ShowTh
    Debug.TraceIf.TH

  ghc-options: -Wall
  hs-source-dirs: src
  default-language: Haskell2010
  default-extensions:
    FlexibleContexts
    FlexibleInstances
    ImportQualifiedPost
    LambdaCase
    ScopedTypeVariables

test-suite test
  type: exitcode-stdio-1.0
  main-is: Driver.hs
  other-modules:
    Discovery
    Debug.TraceIf.Test.TraceIf.TH
    Paths_trace_if
  autogen-modules:
    Paths_trace_if
  hs-source-dirs:
    test
  default-extensions:
    ImportQualifiedPost
    ScopedTypeVariables
  ghc-options: -Wall -dynamic -rtsopts -threaded -main-is Driver
  build-depends:
      base
    , bytestring
    , tasty
    , tasty-discover
    , tasty-hunit
    , tasty-quickcheck
    , template-haskell
    , trace-if
  default-language: Haskell2010

source-repository head
  type:     git
  location: https://github.com/yaitskov/trace-if.git
